--- a/cadastrar.html
+++ b/cadastrar.html
@@ -44,13 +44,56 @@
               <label for="inputEmail4" class="form-label">E-Mail</label>
               <input type="email" class="form-control" id="email" required>
             </div>
-            <div class="col-md-12">
+            <div class="col-md-6">
               <label for="inputPassword4" class="form-label">Senha</label>
               <input type="password" class="form-control" name="senha" id="senha" oninput="senhas()" placeholder="****" required>
             </div>
+            <div class="col-md-6">
+                <label for="inputPassword4" class="form-label">Confirmar Senha</label>
+                <input type="password" class="form-control" name="senha2" id="senha2" oninput="senhas()" placeholder="****" required>
+              </div>
+              <p id="msg"> * As senhas não conferem </p>
+            <div class="col-12">
+              <label for="inputAddress" class="form-label">Nome Completo</label>
+              <input type="text" class="form-control" id="nome" required>
+            </div>
+            <div class="col-6">
+              <label for="cpf" class="form-label"> CPF </label>
+              <input type="text" class="form-control" name="cpf" id="cpf" placeholder="___.___.___-__" onkeypress="mascara_cpf(this)" maxlength="14" onkeyup="salto(this.name, this.value)" onkeydown="return somente_numero(event)">
+          </div>
+          <div class="col-6">
+            <label for="cpf" class="form-label"> Telefone </label>
+            <input type="text" class="form-control" name="tel" id="tel" placeholder="(__)_____-____" onkeypress="mascara_tel(this)" maxlength="14" onkeyup="salto(this.name, this.value)" onkeydown="return somente_numero(event)">
+        </div>
+            <div class="col-12">
+              <label for="inputAddress2" class="form-label">Endereço</label>
+              <input type="text" class="form-control" id="endereco" placeholder="Avenida Brasil, 1000" required>
+            </div>
+            <div class="col-md-6">
+              <label for="inputCity" class="form-label">Cidade</label>
+              <input type="text" class="form-control" id="city" required>
+            </div>
+            <div class="col-md-6">
+              <label for="inputState" class="form-label">Estado</label>
+              <select id="state" class="form-select">
+                <option value="0" selected>Escolha</option>
+                <option value="1">Rio de Janeiro</option>
+                <option value="2">São Paulo</option>
+                <option value="3">Minas Gerais</option>
+              </select>
+            </div>  
+            
+            <div class="col-12">
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="check" name="check">
+                <label class="form-check-label" for="gridCheck">
+                  Concordo com os <a href="termos.html">Termos de Privacidade</a>
+                </label>
+              </div>
+            </div>
             <div class="col-12">
                 <button type="reset" class="btn btn-primary">Limpar</button>
-                <button type="submit" class="btn btn-success">Entrar</button>
+                <button type="submit" class="btn btn-success">Enviar</button>
             </div>
           </form>
     </div>
