--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/navicon.png" type="image/x-icon">
   </head>
+
   <body>
+    <!--NAVBAR-->
     <nav class="navbar navbar-expand-lg menu">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
@@ -30,14 +32,13 @@
               <a class="nav-link" href="comprar.html">Comprar</a>
             </li>
           </ul>
-          
         </div>
       </div>
     </nav>
-            
           </div>
         </div>
       </nav>
+      <!-- CARROSSEL -->
       <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -64,6 +65,16 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+
+      <div class="row g-0">
+        <div class="col-12 col-md-6"><br><br>
+          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam illo distinctio animi, dicta dolorum ab dignissimos quasi architecto reprehenderit unde impedit magni laborum deserunt repellat necessitatibus deleniti ratione nobis atque.</p>
+        </div>
+        <div class="col-12 col-md-6">
+
+        </div>
+      </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
