--- a/login.html
+++ b/login.html
@@ -39,8 +39,9 @@
 <div class="cadastro">
     <div class="col-8 cadastro"><br>
         <form class="row g-3" name="form" id="form" method="post" onsubmit="return envia(this)" novalidate action="envio.html">
-            <h1>Dados Pessoais</h1>
-            <div class="col-md-12">
+            <img src="img/logo02.png" alt="">
+            <h3 class="text-center">Faça Login com seus dados</h3>
+            <div class="col-md-12 login">
               <label for="inputEmail4" class="form-label">E-Mail</label>
               <input type="email" class="form-control" id="email" required>
             </div>
@@ -49,8 +50,8 @@
               <input type="password" class="form-control" name="senha" id="senha" oninput="senhas()" placeholder="****" required>
             </div>
             <div class="col-12">
-                <button type="reset" class="btn btn-primary">Limpar</button>
-                <button type="submit" class="btn btn-success">Entrar</button>
+                <button type="reset" class="btn btn-success">Limpar</button>
+                <button type="submit" class="btn btn-success">Enviar</button>
             </div>
           </form>
     </div>
