--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav text-navbar">
             <li class="nav-item texto-nav">
               <a class="nav-link" aria-current="page" href="login.html">Login</a>
             </li>
@@ -65,13 +65,29 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-
+        <!-- DESCRIÇÃO -->
       <div class="row g-0">
         <div class="col-12 col-md-6"><br><br>
-          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam illo distinctio animi, dicta dolorum ab dignissimos quasi architecto reprehenderit unde impedit magni laborum deserunt repellat necessitatibus deleniti ratione nobis atque.</p>
+          <h1 class="sobre">Sobre o Festival</h1>
+          <p> Nosso festival é composto por 3 dias de muita diversão e muita música boa pra você! 
+            Nesses 3 dias de festival, temos diversos artistas mundialmente conhecidos, com musicas estourando pelo Brasil e outros países também.
+            Temos aqui algumas informações para você:
+            <ul>
+              <li>Apenas para maiores de 18 anos</li>
+              <li>Ingressos a partir de R$90 reais</li>
+              <li>Só é permitido comprar coisas dentro do nosso local de show</li>
+            </ul>
+          </p>
         </div>
         <div class="col-12 col-md-6">
-
+          <h2>Primeiro dia:</h2>
+          <p>No nosso primeiro dia, vamos receber cantores de pagode. são eles:
+            <ul>
+              <li>Menos é mais</li>
+              <li>Mumuzinho</li>
+              <li>Dilsinho</li>
+            </ul>
+          </p>
         </div>
       </div>
 
