--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav text-navbar">
             <li class="nav-item texto-nav">
               <a class="nav-link" aria-current="page" href="login.html">Login</a>
             </li>
