--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg menu">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-          <img src="img/logo.png" alt="" width="50%">
+          <img src="img/logo.png" alt="..." width="50%">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -66,30 +66,59 @@
         </button>
       </div>
         <!-- DESCRIÇÃO -->
-      <div class="row g-0">
-        <div class="col-12 col-md-6"><br><br>
-          <h1 class="sobre">Sobre o Festival</h1>
-          <p> Nosso festival é composto por 3 dias de muita diversão e muita música boa pra você! 
-            Nesses 3 dias de festival, temos diversos artistas mundialmente conhecidos, com musicas estourando pelo Brasil e outros países também.
-            Temos aqui algumas informações para você:
-            <ul>
-              <li>Apenas para maiores de 18 anos</li>
-              <li>Ingressos a partir de R$90 reais</li>
-              <li>Só é permitido comprar coisas dentro do nosso local de show</li>
-            </ul>
-          </p>
+      <div class="row g-0 introdução">
+        <div class="col-12"><br><br>
+          <h1 class="sobre text-center">Sobre o Festival</h1>
+          <p class="text-center">Conheça agora alguns artistas que estarão conosco em nosso festival:</p>
         </div>
-        <div class="col-12 col-md-6">
-          <h2>Primeiro dia:</h2>
-          <p>No nosso primeiro dia, vamos receber cantores de pagode. são eles:
-            <ul>
-              <li>Menos é mais</li>
-              <li>Mumuzinho</li>
-              <li>Dilsinho</li>
-            </ul>
-          </p>
+
         </div>
+      <!-- CARDS -->
+      
+      <div class="row row-cols-1 row-cols-md-3 g-4 cartoes">
+        <div class="col">
+          <div class="card h-100 cartao">
+            <img src="img/carrossel-01.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Menos é mais</h5>
+              <h1 class="card-text">SEX</h1>
+            </div>
+            <div class="card-footer">
+              <a href="#" class="btn btn-success">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 cartao">
+            <img src="img/carrossel-02.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Felipe Ret</h5>
+              <h1 class="card-text">SAB</h1>
+            </div>
+            <div class="card-footer">
+              <a href="#" class="btn btn-success">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 cartao">
+            <img src="img/carrossel-03.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Justin Bieber</h5>
+              <h1 class="card-text">DOM</h1>
+            </div>
+            <div class="card-footer">
+              <a href="#" class="btn btn-success">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+      
+  
       </div>
+
+
+
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
