--- a/index.html
+++ b/index.html
@@ -78,37 +78,37 @@
       <div class="row row-cols-1 row-cols-md-3 g-4 cartoes">
         <div class="col">
           <div class="card h-100 cartao">
-            <img src="img/carrossel-01.jpg" class="card-img-top" alt="...">
+            <img src="img/pagode.jfif" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Menos é mais</h5>
+              <h5 class="card-title">Pagode</h5>
               <h1 class="card-text">SEX</h1>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-success">Go somewhere</a>
+              <a href="#" class="btn btn-success">Comprar</a>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100 cartao">
-            <img src="img/carrossel-02.jpg" class="card-img-top" alt="...">
+            <img src="img/rap-eus-r-111.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Felipe Ret</h5>
+              <h5 class="card-title">Rap - Trap</h5>
               <h1 class="card-text">SAB</h1>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-success">Go somewhere</a>
+              <a href="#" class="btn btn-success">Comprar</a>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100 cartao">
-            <img src="img/carrossel-03.jpg" class="card-img-top" alt="...">
+            <img src="img/internacional.jfif" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Justin Bieber</h5>
+              <h5 class="card-title">internacional</h5>
               <h1 class="card-text">DOM</h1>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-success">Go somewhere</a>
+              <a href="#" class="btn btn-success">Comprar</a>
             </div>
           </div>
         </div>
