--- a/cadastrar.html
+++ b/cadastrar.html
@@ -38,13 +38,13 @@
 <div class="cadastro">
     <div class="col-8 cadastro"><br>
         <form class="row g-3" name="form" id="form" method="post" onsubmit="return envia(this)" novalidate action="envio.html">
-            <h1>Faça seu Cadastro</h1>
+            <h1 class="text-center">Faça seu Cadastro</h1>
 
-            <div class="col-12">
+            <div class="col-6">
               <label for="inputAddress" class="form-label">Nome Completo</label>
               <input type="text" class="form-control" id="nome" required>
             </div>
-            <div class="col-md-12">
+            <div class="col-md-6">
               <label for="inputEmail4" class="form-label">E-Mail</label>
               <input type="email" class="form-control" id="email" placeholder="Ribamar09@gmail.com" required>
             </div>
