--- a/comprar.html
+++ b/comprar.html
@@ -34,24 +34,27 @@
       </div>
     </nav>
 
-    <!-- TELA DE CADASTRO -->
+    <!-- TELA DE COMPRA -->
 <div class="cadastro">
     <div class="col-8 cadastro"><br>
         <form class="row g-3" name="form" id="form" method="post" onsubmit="return envia(this)" novalidate action="envio.html">
-            <h1>Faça seu Cadastro</h1>
+            <h1 class="text-center">Compre seu ingresso aqui</h1>
 
-            <div class="col-12">
+            <div class="col-6">
               <label for="inputAddress" class="form-label">Nome Completo</label>
               <input type="text" class="form-control" id="nome" required>
             </div>
-            <div class="col-md-12">
+
+            <div class="col-md-6">
               <label for="inputEmail4" class="form-label">E-Mail</label>
               <input type="email" class="form-control" id="email" placeholder="Ribamar09@gmail.com" required>
             </div>
+
             <div class="col-md-6">
               <label for="inputPassword4" class="form-label">Senha</label>
               <input type="password" class="form-control" name="senha" id="senha" oninput="senhas()" placeholder="******" required>
             </div>
+
             <div class="col-md-6">
                 <label for="inputPassword4" class="form-label">Confirmar Senha</label>
                 <input type="password" class="form-control" name="senha2" id="senha2" oninput="senhas()" placeholder="******" required>
@@ -62,14 +65,29 @@
             <label for="cpf" class="form-label"> Telefone </label>
             <input type="text" class="form-control" name="tel" id="tel" placeholder="(__)_____-____" onkeypress="mascara_tel(this)" maxlength="14" onkeyup="salto(this.name, this.value)" onkeydown="return somente_numero(event)">
         </div>
+
             <div class="col-12 col-md-6">
               <label for="inputAddress2" class="form-label">Endereço</label>
               <input type="text" class="form-control" id="endereco" placeholder="Avenida das Americas, 157" required>
             </div>
+
+            <div class="col-md-6">
+              <label for="inputState" class="form-label">Escolha o dia em que você deseja ir</label>
+              <select id="state" class="form-select">
+                <option value="0" selected>Escolha</option>
+                <option value="1">Dia 1 - Pagode</option>
+                <option value="2">Dia 2 - Rap-Trap</option>
+                <option value="3">Dia 3 - internacional</option>
+                <option value="3">Ir no dia 1 e 2</option>
+                <option value="3">Ir no dia 2 e 3</option>
+                <option value="3">Ir no dia 1 e 3</option>
+              </select>
+            </div>  
+           
             
             <div class="col-12">
-                <button type="reset" class="btn btn-success">Limpar</button>
-                <button type="submit" class="btn btn-success">Enviar</button>
+                <button type="submit" class="btn btn-success">Comprar</button>
+                <button type="submit" class="btn btn-success">Cancelar</button>
             </div>
           </form>
     </div>
