--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <!-- DESCRIÇÃO -->
       <div class="row g-0 introdução">
         <div class="col-12"><br><br>
-          <h1 class="sobre text-center">Sobre o Festival</h1>
-          <p class="text-center">Conheça agora alguns artistas que estarão conosco em nosso festival:</p>
+          <h1 class="sobre text-center">Escolha o dia que você deseja ir</h1>
+          
         </div>
 
         </div>
@@ -78,37 +78,37 @@
       <div class="row row-cols-1 row-cols-md-3 g-4 cartoes">
         <div class="col">
           <div class="card h-100 cartao">
-            <img src="img/pagode.jfif" class="card-img-top" alt="...">
+            <img src="img/Rectangle 17.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Pagode</h5>
               <h1 class="card-text">SEX</h1>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-success">Comprar</a>
+              <a href="comprar.html" class="btn btn-success">Comprar</a>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100 cartao">
-            <img src="img/rap-eus-r-111.jpeg" class="card-img-top" alt="...">
+            <img src="img/Rectangle 16.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Rap - Trap</h5>
               <h1 class="card-text">SAB</h1>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-success">Comprar</a>
+              <a href="comprar.html" class="btn btn-success">Comprar</a>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card h-100 cartao">
-            <img src="img/internacional.jfif" class="card-img-top" alt="...">
+            <img src="img/Rectangle 18.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">internacional</h5>
               <h1 class="card-text">DOM</h1>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-success">Comprar</a>
+              <a href="comprar.html" class="btn btn-success">Comprar</a>
             </div>
           </div>
         </div>
