--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
     <div class="col-8 cadastro"><br>
         <form class="row g-3" name="form" id="form" method="post" onsubmit="return envia(this)" novalidate action="envio.html">
             <img src="img/logo02.png" alt="">
-            <h3 class="text-center">Faça Login com seus dados</h3>
+            <h3 class="text-center">Faça Login com seu cadastro</h3>
             <div class="col-md-12 login">
               <label for="inputEmail4" class="form-label">E-Mail</label>
               <input type="email" class="form-control" id="email" required>
@@ -59,8 +59,7 @@
             
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    
     <script src="js/script.js"></script>
   </body>
 </html>
