--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav text-navbar">
             <li class="nav-item texto-nav">
-              <a class="nav-link" aria-current="page" href="login.html">Login</a>
+              <a class="nav-link links" aria-current="page" href="login.html">Login</a>
             </li>
             <li class="nav-item texto-nav">
               <a class="nav-link" href="cadastrar.html">Cadastrar</a>
@@ -81,7 +81,7 @@
             <img src="img/Rectangle 17.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Pagode</h5>
-              <h1 class="card-text">SEX</h1>
+              <h1 class="card-text">SEX 20h</h1>
             </div>
             <div class="card-footer">
               <a href="comprar.html" class="btn btn-success">Comprar</a>
@@ -93,7 +93,7 @@
             <img src="img/Rectangle 16.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Rap - Trap</h5>
-              <h1 class="card-text">SAB</h1>
+              <h1 class="card-text">SAB 20h</h1>
             </div>
             <div class="card-footer">
               <a href="comprar.html" class="btn btn-success">Comprar</a>
@@ -105,7 +105,7 @@
             <img src="img/Rectangle 18.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">internacional</h5>
-              <h1 class="card-text">DOM</h1>
+              <h1 class="card-text">DOM 20h</h1>
             </div>
             <div class="card-footer">
               <a href="comprar.html" class="btn btn-success">Comprar</a>
@@ -115,6 +115,19 @@
       
   
       </div>
+      <footer class="footer">
+        <div class="col-12 col-md-6 gusta">
+          <h3 class="text-center text-white">Desenvolvedor</h3>
+          <p class="text-center text-white">Gustavo Cassaro</p><br><br>
+          <h3 class="text-center text-white">Contribuidores</h3>
+          <p class="text-center text-white">Jeanny Laranjeira</p>
+          <p class="text-center text-white">Thiago Lourenço</p>
+        </div>
+        <div class="col-12 col-md-6 vo">
+          <h3 class="text-white text-center">Redes sociais</h3>
+          <a href="https://instagram.com/_gustavocassaro4" class="btn btn-outline-light insta">Gustavo</a>
+        </div>
+      </footer>
 
 
 
@@ -123,8 +136,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+   
     <script src="js/script.js"></script>
   </body>
 </html>
