--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
         </div>
         <div class="carousel-inner carrossel">
           <div class="carousel-item active">
-            <img src="img/carrossel-01.jpg" width="1080px" class="d-block w-100" alt="...">
+            <img src="img/carrossel-1.png" width="1080px" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/carrossel-02.jpg" width="1080px" class="d-block w-100" alt="...">
+            <img src="img/carrossel-2.png" width="1080px" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
             <img src="img/carrossel-03.jpg" width="1080px" class="d-block w-100" alt="...">
@@ -93,7 +93,7 @@
             <img src="img/Rectangle 16.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Rap - Trap</h5>
-              <h1 class="card-text">SAB 20h</h1>
+              <h1 class="card-text">SÁB 20h</h1>
             </div>
             <div class="card-footer">
               <a href="comprar.html" class="btn btn-success">Comprar</a>
@@ -124,7 +124,7 @@
           <p class="text-center text-white">Thiago Lourenço</p>
         </div>
         <div class="col-12 col-md-6 vo">
-          <h3 class="text-white text-center">Redes sociais</h3>
+          <h3 class="text-white text-center">Rede social</h3>
           <a href="https://instagram.com/_gustavocassaro4" class="btn btn-outline-light insta">Gustavo</a>
         </div>
       </footer>
