ACABOU!! É HEXA! É HEXA!

--- a/comprar.html
+++ b/comprar.html
@@ -21,10 +21,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav text-navbar">
             <li class="nav-item texto-nav">
-              <a class="nav-link" aria-current="page" href="login.html">Login</a>
+              <a class="nav-link links" href="cadastrar.html">Cadastrar</a>
             </li>
             <li class="nav-item texto-nav">
-              <a class="nav-link" href="cadastrar.html">Cadastrar</a>
+              <a class="nav-link" aria-current="page" href="login.html">Login</a>
             </li>
             <li class="nav-item texto-nav">
               <a class="nav-link" href="comprar.html">Comprar</a>
@@ -74,13 +74,13 @@
                 <div class="form-check">
                   <input class="form-check-input" type="checkbox" value="" id="name" onchange="valuea(20,this.checked)">
                   <label class="form-check-label" for="flexCheckChecked">
-                    Oppen-Bar
+                    Open Bar
                   </label>
                 </div>
                 <div class="form-check">
                   <input class="form-check-input" type="checkbox" value="" id="numero" onchange="valuea(30,this.checked)"> 
                   <label class="form-check-label" for="flexCheckChecked">
-                    Oppen-food
+                    Open food
                   </label>
                 </div>
                 
