--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav text-navbar">
             <li class="nav-item texto-nav">
-              <a class="nav-link links" aria-current="page" href="login.html">Login</a>
+              <a class="nav-link links" href="cadastrar.html">Cadastrar</a>
             </li>
             <li class="nav-item texto-nav">
-              <a class="nav-link" href="cadastrar.html">Cadastrar</a>
+              <a class="nav-link" aria-current="page" href="login.html">Login</a>
             </li>
             <li class="nav-item texto-nav">
               <a class="nav-link" href="comprar.html">Comprar</a>
@@ -53,7 +53,7 @@
             <img src="img/carrossel-2.png" width="1080px" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/carrossel-03.jpg" width="1080px" class="d-block w-100" alt="...">
+            <img src="img/carrossel-3.png" width="1080px" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -104,7 +104,7 @@
           <div class="card h-100 cartao">
             <img src="img/Rectangle 18.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">internacional</h5>
+              <h5 class="card-title">Internacional</h5>
               <h1 class="card-text">DOM 20h</h1>
             </div>
             <div class="card-footer">
@@ -112,16 +112,18 @@
             </div>
           </div>
         </div>
-      
-  
+        <!-- SOBRE -->
+        <div class="col-12 col-md-12 ende">
+          <h3 class="text-center">Endereço: Av. Cônego Vasconcelos, 549 - Bangu, Rio de Janeiro</h3>
+        </div>
+   
+
       </div>
+      <!-- FOOTER -->
       <footer class="footer">
         <div class="col-12 col-md-6 gusta">
           <h3 class="text-center text-white">Desenvolvedor</h3>
           <p class="text-center text-white">Gustavo Cassaro</p><br><br>
-          <h3 class="text-center text-white">Contribuidores</h3>
-          <p class="text-center text-white">Jeanny Laranjeira</p>
-          <p class="text-center text-white">Thiago Lourenço</p>
         </div>
         <div class="col-12 col-md-6 vo">
           <h3 class="text-white text-center">Rede social</h3>
