--- a/login.html
+++ b/login.html
@@ -22,10 +22,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav text-navbar">
             <li class="nav-item texto-nav">
-              <a class="nav-link" aria-current="page" href="login.html">Login</a>
+              <a class="nav-link links" href="cadastrar.html">Cadastrar</a>
             </li>
             <li class="nav-item texto-nav">
-              <a class="nav-link" href="cadastrar.html">Cadastrar</a>
+              <a class="nav-link" aria-current="page" href="login.html">Login</a>
             </li>
             <li class="nav-item texto-nav">
               <a class="nav-link" href="comprar.html">Comprar</a>
@@ -38,7 +38,7 @@
     <!-- TELA DE CADASTRO -->
 <div class="cadastro">
     <div class="col-8 cadastro"><br>
-        <form class="row g-3" name="form" id="form" method="post" onsubmit="return envia(this)" novalidate action="envio.html">
+        <form class="row g-3" name="form" id="form" method="post" onsubmit="return envia(this)" novalidate action="comprar.html">
             <img src="img/logo02.png" alt="">
             <h3 class="text-center">Faça Login com seu cadastro</h3>
             <div class="col-md-12 login">
