--- a/cadastrar.html
+++ b/cadastrar.html
@@ -21,10 +21,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav text-navbar">
             <li class="nav-item texto-nav">
-              <a class="nav-link" aria-current="page" href="login.html">Login</a>
+              <a class="nav-link links" href="cadastrar.html">Cadastrar</a>
             </li>
             <li class="nav-item texto-nav">
-              <a class="nav-link" href="cadastrar.html">Cadastrar</a>
+              <a class="nav-link" aria-current="page" href="login.html">Login</a>
             </li>
             <li class="nav-item texto-nav">
               <a class="nav-link" href="comprar.html">Comprar</a>
@@ -37,7 +37,7 @@
     <!-- TELA DE CADASTRO -->
 <div class="cadastro">
     <div class="col-8 cadastro"><br>
-        <form class="row g-3" name="form" id="form" method="post" onsubmit="return envia(this)" novalidate action="envio.html">
+        <form class="row g-3" name="form" id="form" method="post" onsubmit="return envia(this)" novalidate action="login.html">
             <h1 class="text-center">Faça seu Cadastro</h1>
 
             <div class="col-6">
